...
                    android:text="@string/Date"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="13dp"
                    android:hint="@string/loading"
                    android:textSize="25sp" />
...
                        android:paddingEnd="0dp"
                        android:text="@string/notes"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/loading"
                        android:textSize="20sp"/>

...
                        android:paddingEnd="0dp"
                        android:text="@string/pills_name"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/PillsName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/loading"
                        android:textSize="20sp"/>
                </LinearLayout>
...
                        android:textSize="20sp"/>
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backbutton"
                style="@android:style/Widget.Button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_bg"
...
