<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="WellSync"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Forgot Password?"
            android:textAlignment="center"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Loginbutton"
            style="@android:style/Widget.Button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_bg"
            android:letterSpacing="0.2"
            android:text="LOGIN"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dont have an Account?"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:text="SignUp"
                android:textColor="@color/medication_end"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>