<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/see_progress"
        android:layout_width="153dp"
        android:layout_height="56dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/button_bg"
        android:text="User progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advise_from_doctor"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="203dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Patient Information"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="36dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/ic_user"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/user" />

        <TextView
            android:id="@+id/lab_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="13dp"
            android:text="Name: "
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="13dp"
            android:hint="Loading..."
            android:textSize="25dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <ImageView
            android:id="@+id/ic_bday"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bday" />

        <TextView
            android:id="@+id/lab_bday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="13dp"
            android:text="Age: "
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="13dp"
            android:hint="Loading..."
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/ic_gender"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/gender" />

        <TextView
            android:id="@+id/lab_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="13dp"
            android:text="Gender: "
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="13dp"
            android:hint="Loading..."
            android:textSize="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginBottom="40dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/send_rec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <ImageView
            android:id="@+id/ic_bloodtype"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/blood_type" />

        <TextView
            android:id="@+id/lab_bloodtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="13dp"
            android:text="Blood type: "
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bloodtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="13dp"
            android:hint="Loading..."
            android:textSize="25sp" />


    </RelativeLayout>


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="10dp"
        android:text="Send a recommendation to your patient:"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/advise_from_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.386" />

    <Button
        android:id="@+id/send_rec"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bg"
        android:text="Send"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/advise_from_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <EditText
        android:id="@+id/advise_from_doctor"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="182dp"
        android:background="@drawable/edittext_bg"
        android:gravity="top"
        android:hint="Type here..."
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_rec"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/delete_patient"
        android:layout_width="153dp"
        android:layout_height="56dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_bg"
        android:text="Delete patient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/daily_logs"
        android:layout_width="153dp"
        android:layout_height="56dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/button_bg"
        android:text="Daily Logs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advise_from_doctor"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
