<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="69dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="45sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/patientList"
        android:layout_width="563dp"
        android:layout_height="512dp"
        android:layout_above="@+id/textView4"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="14dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="239dp"
        android:layout_height="58dp"
        android:layout_above="@+id/patient_email_input"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="41dp"
        android:gravity="center_horizontal"
        android:text="Add a patient"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/patient_email_input"
        android:layout_width="302dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="145dp"
        android:background="@drawable/edittext_bg"
        android:hint="Enter an email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/add_patient"
        android:layout_width="152dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="147dp"
        android:background="@drawable/button_bg"
        android:text="ADD" />

    <Button
        android:id="@+id/logout"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/edittext_bg"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="63dp"
        android:text="Log Out" />

</RelativeLayout>
