...
                android:text="Name: "
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="13dp"
                android:hint="Loading..."
                android:textSize="25dp"/>
...
            android:padding="15dp">

            <ImageView
                android:id="@+id/ic_gender"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/gender" />

            <TextView
                android:id="@+id/lab_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
...
