...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close"
                android:layout_width="14dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/close_white" />

...
